# todo_fastapi

./: .gitignore  LICENSE  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 75a995ab5629_create_users_and_taks_table.py  75a995ab5629_create_users_and_tasks_table.py  ee2aba87d959_task_without_user_permitted.py
task_fastapi/: app.py  deps.py
task_fastapi/models/: task.py  user.py
task_fastapi/repositories/: task.py  user.py
task_fastapi/routers/: task.py  user.py
task_fastapi/schemas/: task.py  user.py
task_fastapi/settings/: database.py  security.py  token.py
tests/: conftest.py  test_app.py  test_database.py  test_deps.py  test_security.py  test_settings.py  test_task_model.py  test_task_repository.py  test_task_router.py  test_task_schemas.py  test_user_model.py  test_user_repository.py  test_user_router.py  test_user_schemas.py
